# sonde

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SOCIAL_MEDIA_PLAN.md  install.sh  sonde.toml  sonde.toml.bak.20260319172521  sonde.toml.bak.20260319172533
.github/workflows/: ci.yml  release.yml
Formula/: sonde.rb
SondeApp/: AppIcon.icns  Makefile  Package.swift  project.yml
SondeApp/Sources/SondeApp/: FloatingWatcherView.swift  HistoryChartView.swift  Info.plist  OnboardingView.swift  PopoverView.swift  ProjectsView.swift  SettingsView.swift  SondeApp.entitlements  SondeApp.swift  SondeLogoMascot.swift  SparklineView.swift  ToastView.swift
SondeApp/Sources/SondeCore/: AgentWatcher.swift  CloudSyncManager.swift  CodexCost.swift  CredentialProvider.swift  DailySpend.swift  NotificationManager.swift  Pacing.swift  PromoAPI.swift  PromoDetector.swift  PromoSchedule.swift  SessionData.swift  SharedDefaults.swift  SondeViewModel.swift  TimeFormatting.swift  UpdateChecker.swift  UsageAPI.swift  UsageHistory.swift
docs/: index.html  statusbar-mockup.html
raycast-extension/: package.json
raycast-extension/src/: usage.tsx
scripts/: generate_icon.py
src/: ansi.rs  cache.rs  config.rs  context.rs  doctor.rs  history.rs  main.rs  notifications.rs  platform.rs  promo.rs  renderer.rs  session_scanner.rs  setup.rs  themes.rs  themes_preview.rs  usage_api.rs
src/modules/: active_sessions.rs  agent_badge.rs  codex_cost.rs  combined_spend.rs  context_bar.rs  context_window.rs  copilot_cost.rs  cost.rs  cursor.rs  custom.rs  gemini_cost.rs  git_branch.rs  mascot.rs  mod.rs  model.rs  model_suggestion.rs  pacing.rs  project.rs  promo_badge.rs  session_clock.rs  usage_5h.rs  usage_7d.rs  usage_limits.rs  windsurf_cost.rs  worktree.rs
src/tui/: app.rs  configurator.rs  mod.rs  ui.rs
tests/fixtures/: sample_codex_session.jsonl  sample_input_full.json  sample_input_minimal.json  sample_promo_response.json  sample_usage_api_response.json
vscode-extension/: package.json
vscode-extension/src/: extension.ts
(+21 files in other folders)
