[package]
name          = "sonde"
version       = "0.1.0"
edition       = "2021"
description   = "Precision instrumentation that continuously measures AI usage and reports conditions in real-time"
license       = "MIT"
keywords      = ["claude", "codex", "statusline", "usage", "terminal"]
categories    = ["command-line-utilities"]
readme        = "README.md"

[dependencies]
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
ureq           = { version = "2", features = ["json"] }
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nu-ansi-term   = "0.50"
dirs           = "5"
chrono         = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rstest     = "0.23"
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
